# algorithm-competition-corpus

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml  ty.toml
docs/specifications/: competition-corpus.md
src/algorithm_corpus/: __init__.py
src/algorithm_corpus/backtracking/: __init__.py  n_queens.py  permutations.py  subsets.py  sudoku.py
src/algorithm_corpus/binary_search/: __init__.py  binary_search.py  bounds.py  peak_finding.py  search_range.py  search_rotated.py
src/algorithm_corpus/bit_manipulation/: __init__.py  advanced_ops.py  basic_ops.py  bit_advanced.py
tests/: __init__.py  conftest.py
tests/test_backtracking/: __init__.py  test_n_queens.py  test_permutations.py  test_subsets.py  test_sudoku.py
tests/test_binary_search/: __init__.py  test_binary_search.py  test_bounds.py  test_peak_finding.py  test_search_range.py  test_search_rotated.py
tests/test_bit_manipulation/: __init__.py  test_advanced_ops.py  test_basic_ops.py  test_bit_advanced.py
tests/test_divide_and_conquer/: __init__.py  test_binary_search_dc.py  test_max_subarray_dc.py  test_merge_sort_dc.py
tests/test_dynamic_programming/: __init__.py  test_coin_change.py  test_edit_distance.py  test_fibonacci.py  test_knapsack.py  test_lcs.py  test_lis.py  test_word_break.py
tests/test_graph/: __init__.py  test_bellman_ford.py  test_bfs.py  test_connected_components.py  test_cycle_detection.py  test_dfs.py  test_dijkstra.py  test_shortest_path.py  test_topological_sort.py  test_union_find.py
tests/test_greedy/: __init__.py  test_activity_selection.py  test_coin_greedy.py  test_interval_scheduling.py  test_jump_game.py
tests/test_heap/: __init__.py  test_heap_ops.py  test_kth_element.py  test_kth_problems.py
tests/test_interval/: __init__.py  test_interval_ops.py  test_interval_scheduling.py
tests/test_linked_list/: __init__.py  test_list_advanced.py  test_list_ops.py  test_list_problems.py
tests/test_math/: __init__.py  test_combinatorics.py  test_gcd.py  test_geometry.py  test_power.py  test_primes.py
tests/test_matrix/: __init__.py  test_matrix_ops.py  test_matrix_path.py  test_matrix_search.py
tests/test_number/: __init__.py  test_conversion.py  test_digit_ops.py
tests/test_queue/: __init__.py  test_queue_reconstruction.py  test_sliding_max.py
tests/test_sliding_window/: __init__.py  test_kadane.py  test_window_patterns.py
tests/test_sorting/: __init__.py  test_counting_sort.py  test_heap_sort.py  test_merge_sort.py  test_quick_sort.py  test_radix_sort.py
tests/test_stack/: __init__.py  test_expression.py  test_monotonic.py  test_parentheses.py
tests/test_string/: __init__.py  test_kmp.py  test_longest_substring.py  test_rabin_karp.py  test_string_ops.py
tests/test_tree/: __init__.py  test_bst.py  test_lca.py  test_tree_properties.py  test_tree_traversal.py
tests/test_two_pointers/: __init__.py  test_container.py  test_palindrome.py  test_partition.py  test_subarray.py  test_two_sum.py
(+85 files in other folders)
